# sbp-observability-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  codex-review.yml  security.yml
examples/configs/: sbp_observability.example.yaml
examples/logs/: sbp_gateway_csv_sample.csv
examples/reports/: weekly_report_sample_ru.md
grafana/alerts/: sbp_alert_rules.yml
grafana/dashboards/: sbp_business.json  sbp_tech_ops.json
sbp_observability/: __init__.py  config.py  models.py
sbp_observability/ai/: ai_provider.py  error_classifier.py  report_generator.py
sbp_observability/cli/: main.py
sbp_observability/exporter/: collector.py  metrics.py  server.py
sbp_observability/parsing/: __init__.py  csv_log_parser.py  json_log_parser.py  nginx_access_parser.py  normalizer.py
sbp_observability/proxy/: http_proxy.py
scripts/: dev_run_all_tests.sh  lint.sh  perf_check.sh  security_scan.sh
tests/integration/: test_full_weekly_report_flow.py  test_logs_to_metrics_flow.py  test_proxy_to_exporter_flow.py
tests/unit/: test_cli_main.py  test_csv_log_parser.py  test_error_classifier.py  test_json_log_parser.py  test_metrics.py  test_nginx_access_parser.py  test_normalizer.py  test_report_generator.py
